Drivers: Inserted author information where it was missing
- Fixed doxygen documentation so it doesn't include drivers and boxes in the class lists
- Added some explaining notes about the doxygen doc


Former-commit-id: 1dde7cc7586ffc33b9b3319f2138f49bc2bb563d [formerly a59c6f114b7c261f41dc1797b28734193573c000]
Former-commit-id: 172b37bc595a16007c67c5b1c133f026cbac90ed

--- a/documentation/src/header.html
+++ b/documentation/src/header.html
@@ -30,18 +30,19 @@
 				<li><a href="hierarchy.html">Class Hierarchy</a></li>
 				<li><a href="Doc_BoxAlgorithms.html"><b>Box Descriptions</b></a></li>
 			</ul>
-			<h2>OpenViBE Manual</h2>
+			<h2>Online Manual</h2>
 			<ul>
 				<li><a href="http://openvibe.inria.fr/documentation-index">Documentation Index</a></li>
 				<li><a href="http://openvibe.inria.fr/documentation-index/#User+Documentation">User Documentation</a></li>
 				<li><a href="http://openvibe.inria.fr/documentation-index/#Developer+Documentation">Developer Documentation</a></li>
 				<li><a href="http://openvibe.inria.fr/start">Video Tutorials</a></li>
+				<li><a href="http://openvibe.inria.fr/documentation/">Other versions of this doc</a></li>
 			</ul>
 			<h2>Quick Access</h2>
 			<ul>
 				<li><a href="http://openvibe.inria.fr">OpenViBE Home</a></li>
 				<li><a href="http://openvibe.inria.fr/forum">Forum</a></li>
-				<li><a href="http://gforge.inria.fr/projects/openvibe">SVN Repository</a></li>
+				<li><a href="http://gforge.inria.fr/projects/openvibe">Code Repository</a></li>
 				<li><a href="http://openvibe.inria.fr/tracker">Bugtracker</a></li>
 			</ul>
 			<h2>Contact</h2>
